fixed all ngrx related issues, continued development on store, reduces and actions

--- a/src/app/components/deliveries/deliveries.component.html
+++ b/src/app/components/deliveries/deliveries.component.html
@@ -50,4 +50,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <dialogBox></dialogBox>
+  <div class="overlayDialog" *ngIf=""></div>
 </div>
