--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,43 +1,40 @@
 
 <div class="dialogFormWrapper">
-  <h2 mat-dialog-title>Add New Item</h2>
-  <form [formGroup]="dialogForm" class="dialogForm">
+  <div class="dialogHeader">
     <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Item Name</mat-label>
-        <input matInput type="text" formControlName="itemName">
-      </mat-form-field>
+      <h2 mat-dialog-title>Add New Item</h2>
+    </div>
+    <div>
+      <button mat-icon-button aria-label="close dialog" mat-dialog-close><mat-icon>close</mat-icon></button>
+    </div>
+  </div>
+  <form [formGroup]="dialogForm" class="dialogForm">
+    <div class="innerFormWrapper">
+      <div>
+        <mat-form-field appearance="outline">
+          <mat-label>Item Name</mat-label>
+          <input matInput type="text" formControlName="itemName">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Store</mat-label>
+          <input matInput type="text" formControlName="store">
+        </mat-form-field>
+      </div>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Item Name</mat-label>
-        <input matInput type="text" formControlName="store">
-      </mat-form-field>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Item Name</mat-label>
-        <input matInput type="text" formControlName="price">
-      </mat-form-field>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Item Name</mat-label>
-        <input matInput type="text" formControlName="reciveDateInformation">
-      </mat-form-field>
+      <div>
+        <mat-form-field appearance="outline">
+          <mat-label>Price</mat-label>
+          <input matInput type="text" formControlName="price">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Receive Date Estimation</mat-label>
+          <input matInput type="text" formControlName="reciveDateInformation">
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="buttonsDiv">
+      <button mat-stroked-button type="submit">Add Item</button>
+      <button mat-stroked-button mat-icon-button aria-label="close dialog" mat-dialog-close>Cancel</button>
     </div>
   </form>
 </div>
-
-
-
-
-<!-- <mat-dialog-content class="mat-typography"> -->
-  <!-- <h3>Develop across all platforms</h3> -->
-  <!-- <p>An app's components typically define many views, arranged hierarchically. Angular provides -->
-  <!-- the Router service to help you define navigation paths among views. The router provides -->
-  <!-- sophisticated in-browser navigational capabilities.</p> -->
-<!-- </mat-dialog-content> -->
-<!-- <mat-dialog-actions align="end"> -->
-<!--  -->
-<!-- </mat-dialog-actions> -->
-
-<!-- <button mat-button mat-dialog-close>Cancel</button> -->
-<!-- <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button> -->
