--- a/src/app/components/purchases/purchases-by-store/purchases-by-store.component.html
+++ b/src/app/components/purchases/purchases-by-store/purchases-by-store.component.html
@@ -1,5 +1,5 @@
 <section class="summeryContainer">
   <h1>Summery</h1>
-  <Summery></Summery>
+  <Summery [displayedColumns]="summeryColumns"></Summery>
 </section>
 
