--- a/src/app/shared/components/currency/currency.component.html
+++ b/src/app/shared/components/currency/currency.component.html
@@ -3,8 +3,8 @@
     <span>Currency:</span>
     <div class="currencyDropdown">
       <select required>
-        <option value="">₪</option>
-        <option value="">$</option>
+        <option value="ILS">₪</option>
+        <option value="USD">$</option>
       </select>
     </div>
   </div>
