--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,9 @@
 <section class="headerWrapper">
   <div class="headerComponentsContainer">
       <Navigation></Navigation>
+      <div class="headerTitle">
+        <h1>Shopping Tracking List</h1>
+      </div>
       <Currency></Currency>
   </div>
 </section>
