--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,4 +1,3 @@
-
 <div class="dialogFormWrapper">
   <div class="dialogHeader">
     <div>
@@ -8,33 +7,34 @@
       <button mat-icon-button aria-label="close dialog" mat-dialog-close><mat-icon>close</mat-icon></button>
     </div>
   </div>
-  <form [formGroup]="dialogForm" class="dialogForm">
+  <form [formGroup]="dialogForm" class="dialogForm" (ngSubmit)="newItemSubmitFromDialog(dialogForm.value)" novalidate>
     <div class="innerFormWrapper">
       <div>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="standard">
           <mat-label>Item Name</mat-label>
-          <input matInput type="text" formControlName="itemName">
+          <input matInput type="text" formControlName="title" required>
         </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Store</mat-label>
-          <input matInput type="text" formControlName="store">
+        <mat-form-field appearance="standard">
+          <mat-label>Price</mat-label>
+          <input matInput type="number" formControlName="price" required>
         </mat-form-field>
       </div>
-
       <div>
-        <mat-form-field appearance="outline">
-          <mat-label>Price</mat-label>
-          <input matInput type="text" formControlName="price">
+        <mat-form-field appearance="standard">
+          <mat-label>Store</mat-label>
+          <input matInput type="text" formControlName="store" required>
         </mat-form-field>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="standard">
           <mat-label>Receive Date Estimation</mat-label>
-          <input matInput type="text" formControlName="reciveDateInformation">
+          <input matInput [matDatepicker]="picker" formControlName="delivery" required>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
       </div>
     </div>
     <div class="buttonsDiv">
       <button mat-stroked-button type="submit">Add Item</button>
-      <button mat-stroked-button mat-icon-button aria-label="close dialog" mat-dialog-close>Cancel</button>
+      <button mat-stroked-button aria-label="close dialog" mat-dialog-close>Cancel</button>
     </div>
   </form>
 </div>
