--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -1,68 +1,120 @@
 .dialogFormWrapper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-flow: column;
+  width: 650px;
+  height: 500px;
+  padding: 30px;
   position: relative;
   z-index: 11113;
-  background-color: #121f3f0c;;
-    .dialogHeader {
-      display: flex;
-      width: 100%;
-      height: 100%;
-      div:first-child{
-        position: relative;
-        margin: 0 auto;
-        top: 50px;
-        h2 {
-          text-align: center;
-          margin: 0;
-          padding: 0;
-        }
-      }
-      div:not(:first-child) {
-        position: absolute;
-        top: 0;
-        right: 0;
-        button {
-          margin: 0;
-          padding: 0;
-        }
-      }
-    }
-   .dialogForm {
-    width: 30vw;
-    height: 450px;
+  background-color: #121f3f1e;
+  @media screen and (max-width: 992px) {
+    height: 100%;
+    max-width: 100%;
+    padding: 0;
     display: flex;
     flex-flow: column;
-    justify-content: center;
-    align-items: center;
+  }
+  ::ng-deep .mat-form-field {
+    width: 85%;
+    padding: 15px;
+    color: #121f3f;
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+    }
+
+    .mat-form-field.mat-form-field-invalid {
+      .mat-form-field-outline {
+        color: #ffb032;
+      }
+      .mat-form-field-label {
+        color: #386cee;
+      }
+    }
+  }
+
+  .dialogHeader {
+    div:first-child {
+      h2 {
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        color: #121f3fd3;
+      }
+      @media screen and (max-width: 992px) {
+        position: absolute;
+        margin: 0 auto;
+        width: 100%;
+        top: 25px;
+      }
+    }
+    div:not(:first-child) {
+      position: absolute;
+      top: 0;
+      right: 0;
+      @media screen and (max-width: 992px) {
+        position: absolute;
+        right: 0;
+      }
+      button {
+        margin: 0;
+        padding: 0;
+      }
+    }
+  }
+
+  .dialogForm {
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    @media screen and (max-width: 992px) {
+      margin: 50px auto;
+      display: flex;
+      justify-content: unset;
+    }
     .innerFormWrapper {
       width: 100%;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 10px;
+      @media screen and (max-width: 992px) {
+        display: block;
+        padding: 0;
+        height: 100%;
+        margin: auto;
+        width: 85%;
+      }
       > div {
-        display: flex;
-        flex-flow: column;
-        margin: 15px;
-        ::ng-deep mat-form-field{
-          margin: 15px;
+        width: 100%;
+        @media screen and (max-width: 992px) {
+          display: flex;
+          flex-flow: column;
+          justify-content: center;
+          align-items: center;
         }
       }
     }
     .buttonsDiv {
-      display: flex;
+      display: inline-flex;
       justify-content: center;
-      width: 75%;
+      width: 100%;
       button {
+        width: 180px;
         margin: 0 25px;
+        border-color: #ffb032;
+        color: #121f3f;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+          background-color: #121f3f;
+          color: #ffb032;
+        }
+        &:nth-child(2) {
+          &:hover {
+            background-color: rgb(161, 50, 50);
+          }
+        }
       }
     }
-    .buttonsDiv::first-child{
-      button::first-child {
-        background-color: red !important;
-      }
-    }
-   }
+  }
 }
