--- a/src/app/components/summery/summery.component.html
+++ b/src/app/components/summery/summery.component.html
@@ -1,2 +1,35 @@
-<div class="purchaseContainerSummery">
+<div class="summeryTableWrapper">
+  <table mat-table [dataSource]="dataSource" class="summeryTable">
+    <!-- Item Column -->
+    <ng-container matColumnDef="store">
+      <th mat-header-cell *matHeaderCellDef> Store Name </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.store}} </td>
+      <td mat-footer-cell *matFooterCellDef> Total </td>
+    </ng-container>
+
+    <!-- Cost Column -->
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef> Quantity </th>
+      <td mat-cell *matCellDef="let transaction"> X{{transaction.quantity}} </td>
+      <td mat-footer-cell *matFooterCellDef> {{getTotalQuantity()}} </td>
+    </ng-container>
+
+    <!-- Cost Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> Price </th>
+      <td mat-cell *matCellDef="let transaction"> {{transaction.price | currency: !usdIlsSwitch ? 'ILS' : 'USD'}} </td>
+      <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency: !usdIlsSwitch ? 'ILS' : 'USD'}} </td>
+    </ng-container>
+
+
+    <!-- The table will render two header rows, one data row per data object, and two footer rows. -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"
+        class="summeryTableColumns">
+    </tr>
+
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+  </table>
+
 </div>
