--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -1,21 +1,26 @@
-//! FIX loader position
 :host {
-  width: 75%;
-  height: 65%;
-  top: 85px;
-  z-index: 11111;
-  opacity: .5;
-  .spinnerContainer {
-    width: 100%;
-    height: 100%;
+    z-index: 11111;
+    position: absolute;
+    backdrop-filter: blur(3px);
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+  .spinnerContainer {
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    background-color: #fff3e1;
+    ::ng-deep mat-spinner {
+      svg {
+        circle.ng-star-inserted{
+          stroke: #121f3f !important;
+        }
+      }
+    }
   }
-
 }
