--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,6 +4,8 @@
       <div class="headerTitle">
         <h1>Shopping Tracking List</h1>
       </div>
-      <Currency></Currency>
+      <Currency
+      [currencySymbols]="currencySymbolsList"
+      ></Currency>
   </div>
 </section>
