--- a/src/app/components/deliveries/deliveries.component.scss
+++ b/src/app/components/deliveries/deliveries.component.scss
@@ -1,41 +1,54 @@
-.tabHeaderWrapper {
+.deliveryWrapper {
   width: 100%;
-  margin: 0 auto;
-  display: inline-flex;
-  .itemsFilterDiv {
-    display: flex;
+  .tabHeaderWrapper {
     width: 100%;
-    justify-content: flex-start;
-  }
-  .addItemBtnDiv {
-    display: inherit;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    .newItemBtn {
-      height: min-content;
-      color: #fff;
-      background-color: #121f3f7a;
-      transition: all 0.1s ease-in-out;
-      &:hover {
-        color: #ffe2b4;
-        background-color: #121f3fa0;
-      }
-      &:active {
-        color: #ffc25f;
+    margin: 0 auto;
+    display: inline-flex;
+    overflow: hidden;
+    .addItemBtnDiv {
+      display: inherit;
+      justify-content: flex-end;
+      align-items: center;
+      width: 100%;
+      padding: 0;
+      .newItemBtn {
+        height: min-content;
+        color: #fff;
+        background-color: #121f3f7a;
+        transition: all 0.1s ease-in-out;
+        &:hover {
+          color: #ffe2b4;
+          background-color: #121f3fa0;
+        }
+        &:active {
+          color: #ffc25f;
+        }
       }
     }
-  }
-  > div {
-    margin: 0 15px;
-  }
-
-  .storeNamesTableDiv {
-    td {
+    > div {
+      margin: 0 15px;
+    }
+    .currencyDiv {
       display: flex;
-      flex-flow: column;
+      align-items: center;
+
+      .currencyDetails {
+        ::ng-deep .mat-form-field {
+          color: #8f8f8f !important;
+          .currencySymbolInlnine {
+            display: inline-flex;
+            span {
+              padding: 0 2px 0 0;
+            }
+          }
+        }
+      }
+    }
+    .storeNamesTableDiv {
+      td {
+        display: flex;
+        flex-flow: column;
+      }
     }
   }
-
 }
