--- a/src/app/components/purchases/purchases-by-items/purchases-by-items.component.scss
+++ b/src/app/components/purchases/purchases-by-items/purchases-by-items.component.scss
@@ -35,22 +35,53 @@
     }
     .deliveryTable,
     .archiveTable {
+      overflow: auto;
+
       .mat-table {
         line-height: 5;
         width: 100%;
         .mat-header-row {
+          width: 100%;
+          display: inline-flex;
           th.mat-header-cell {
+            color: #3c4356;
             background-color: #121f3f1c;
             border: none;
+            width: calc(100%/6);
+            display: inline-flex;
+            justify-content: center;
             @media screen and (max-width: 768px) {
               font-size: 75%;
+              width: 100%;
+              font-size: 55%;
+              padding: 0;
+              align-items: center;
+              :active {
+                color: #ff9f00 !important;
+              }
+                .mat-sort-header-arrow {
+                  display: none;
+              }
             }
           }
         }
         .mat-row {
           line-height: 1.8;
           td.mat-cell {
+            color: #3c4356;
+            font-size: small;
+            padding: 0;
             border: none;
+            width: calc(100%/6);
+            display: inline-flex;
+            justify-content: center;
+            @media screen and (max-width: 768px) {
+              font-size: 11px;
+              width: calc(100%/6);
+              .mat-form-field-infix{
+                width: 90px;
+              }
+            }
             .archiveBtn {
               transition: all 0.115s ease-in-out;
               &:active {
@@ -61,13 +92,8 @@
                 color: aliceblue;
               }
               @media screen and (max-width: 768px) {
-                font-size: small;
+                font-size: 11px;
               }
-            }
-            @media screen and (max-width: 768px) {
-              font-size: smaller;
-              padding: 0;
-              text-align: center;
             }
           }
         }
@@ -82,7 +108,18 @@
     }
   }
 }
-::ng-deep .mat-dialog-container {
-  padding: 0 !important;
-  border-radius: 1em !important;
+::ng-deep {
+  .mat-dialog-container {
+    padding: 0 !important;
+    border-radius: 1em !important;
+  }
 }
+
+::ng-deep .mat-tab-body-wrapper{
+  width: 100%;
+  height: 100%;
+  Loader {
+    height: 100%;
+  }
+}
+
