--- a/src/app/components/summery/summery.component.scss
+++ b/src/app/components/summery/summery.component.scss
@@ -31,11 +31,11 @@
 
     }
     th.mat-header-cell, td.mat-footer-cell{
+      width: calc(100%/3);
       font-size: 16px !important;
       font-weight: 600;
       text-align: center;
       @media screen and (max-width: 768px) {
-        width: 85%;
         font-size: smaller;
       }
       &:first-of-type{
@@ -54,13 +54,6 @@
         font-size: large;
       }
     }
-    // ::ng-deep .mat-footer-row {
-    //   td.mat-footer-cell {
-    //     font-size: 16px !important;
-    //     font-weight: 600;
-    //     text-align: center;
-    //   }
-    // }
   }
 
 }
