--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -1,11 +1,12 @@
 :host {
     z-index: 11111;
     position: absolute;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(5px);
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    height: 100%;
   .spinnerContainer {
     width: 100%;
     height: 100%;
