minor adjustments - done

--- a/src/app/components/purchases/purchases-by-items/purchases-by-items.component.html
+++ b/src/app/components/purchases/purchases-by-items/purchases-by-items.component.html
@@ -5,7 +5,8 @@
       <Delivery
       [displayedColumns]="tableColumns"
       [storeNames]="tablesOnlineStores"
-      [isLoadingDelivery]="isLoading$"
+      (currentCurrencyEmmiter)="currentCurrencyReciever($event)"
+      [isLoading$]="isLoading$"
       ></Delivery>
     </mat-tab>
     <!--Archives Tab-->
