--- a/src/app/components/purchases/purchases-by-items/purchases-by-items.component.html
+++ b/src/app/components/purchases/purchases-by-items/purchases-by-items.component.html
@@ -5,6 +5,8 @@
       <Delivery
       [displayedColumns]="tableColumns"
       [storeNames]="tablesOnlineStores"
+      (currentCurrencyEmmiter)="currentCurrencyReciever($event)"
+      [isLoading$]="isLoading$"
       ></Delivery>
     </mat-tab>
     <!--Archives Tab-->
@@ -12,8 +14,8 @@
       <Archives
       [displayedColumns]="tableColumns"
       [storeNames]="tablesOnlineStores"
+      [isLoadingArchives]="isLoading$"
       ></Archives>
     </mat-tab>
   </mat-tab-group>
-  <!-- <Loader *ngIf="isLoading$ | async"></Loader> -->
 </section>
